added instructions screen and map

--- a/POKERPG/styles.css
+++ b/POKERPG/styles.css
@@ -4,7 +4,6 @@ body {
     padding: 0;
     background-color: #f1f1f1;
 
-
 }
 canvas {
     border: 1px solid #d3d3d3;
@@ -28,4 +27,5 @@ h1{
     margin: 0;
     padding: 1%;
     background: linear-gradient(to right, white, red);
+    align-self: center;
 }
