--- a/POKERPG/styles.css
+++ b/POKERPG/styles.css
@@ -8,7 +8,6 @@ body {
 canvas {
     border: 1px solid #d3d3d3;
     background-color: #f1f1f1;      /*for testing only*/
-    margin-bottom: 10%;
 
 }
 #mainArea {
@@ -38,4 +37,69 @@ footer{
     position: fixed;
     bottom: 0;
     width: 100%;
+}
+
+
+.pokedex {
+    display: none;
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  .pokedex-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: fit-content;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+#pokedexButton {
+    color: white;
+    border: none;
+  }
+
+#pokedexDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-bottom: 10%;
+  }
+#searchbar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 10%
+}
+
+#search{
+    width: 40%;
+    border-color: grey;
+}
+#search::placeholder{
+    text-align: center;
+    font-family: 'Press Start 2P';
 }
