--- a/POKERPG/styles.css
+++ b/POKERPG/styles.css
@@ -15,7 +15,7 @@ canvas {
     justify-content: center;
     align-items: center;
     height: 100%;
-    margin-top: 5%;
+    margin-top: 1%;
 }
 
 #startbutton {
@@ -64,7 +64,7 @@ footer{
   .close {
     color: #aaa;
     float: right;
-    font-size: 28px;
+    font-size: 2.8rem;
     font-weight: bold;
   }
   
@@ -85,7 +85,6 @@ footer{
     justify-content: center;
     align-items: center;
     height: 100%;
-    margin-bottom: 10%;
   }
 #searchbar{
     display: flex;
