made samll changes to the websites

--- a/BACKEND/LMS/templates/error/index.html
+++ b/BACKEND/LMS/templates/error/index.html
@@ -6,30 +6,30 @@
         body {
             background-color: #000;
             color: #fff;
-            font-family: 'Courier New', monospace; /* Change the font to a monospaced font like Courier New */
+            font-family: 'Courier New', monospace;
             text-align: center;
-            padding-top: 100px;
+            padding-top: 10%; 
         }
         h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
+            font-size: 5rem; 
+            margin-bottom: 2%; 
         }
         p {
-            font-size: 24px;
-            margin-bottom: 40px;
+            font-size: 3rem; 
+            margin-bottom: 8%; 
         }
         .console {
             background-color: #333;
             color: #0f0;
-            padding: 20px;
+            padding: 5%; 
             margin: 0 auto;
-            width: 400px;
-            border-radius: 5px;
+            width: 40vw; 
+            border-radius: 4%;
         }
         .console-input,
         .console-output {
-            font-family: 'Courier New', monospace; /* Change the font to a monospaced font like Courier New */
-            font-size: 18px; /* Increase the font size to your desired value */
+            font-family: 'Courier New', monospace;
+            font-size: 2rem; 
             color: #0f0;
         }
         .console-output {
