--- a/BACKEND/LMS/templates/home/index.html
+++ b/BACKEND/LMS/templates/home/index.html
@@ -36,7 +36,7 @@
       color: #000;
       border: none;
       padding: 10px 20px;
-      font-size: 18px;
+      font-size: 1.1rem;
       border-radius: 5px;
       cursor: pointer;
     }
@@ -52,14 +52,14 @@
       flex-direction: column;
     }
     h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
+      font-size: 3rem;
+      margin-bottom: 1%;
       text-align: center;
     }
     p {
-      font-size: 24px;
+      font-size: 1.8rem;
       text-align: center;
-      margin-bottom: 40px;
+      margin-bottom: 2%;
     }
   </style>
 </head>
