--- a/BACKEND/LMS/templates/login/admin.html
+++ b/BACKEND/LMS/templates/login/admin.html
@@ -99,6 +99,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary login-btn">Login</button>
             </form>
+            <div id="message" class="mt-3"></div>
         </div>
     </div>
 
@@ -122,6 +123,26 @@
             const randomColor = colors[Math.floor(Math.random() * colors.length)];
             star.style.backgroundColor = randomColor;
         }
+        const form = document.querySelector('form');
+        const message = document.getElementById('message');
+
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const formData = new FormData(form);
+            const response = await fetch('/login/admin', {
+                method: 'POST',
+                body: formData
+            });
+            if (response.ok) { 
+            if (response.redirected) {
+                window.location.href = response.url;
+                //TODO: add the JSON WEB TOKEN to the local storage here
+            }
+            } else {
+            const error = await response.json();
+            message.innerText = error.message;
+            }
+        });
     </script>
 </body>
 </html>
