Completed JWT cookie authentication and adding middleware

--- a/BACKEND/LMS/templates/login/noaccess.html
+++ b/BACKEND/LMS/templates/login/noaccess.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 Error</title>
+    <title>403 Error</title>
     <style>
         body {
             background-color: #000;
@@ -29,7 +29,7 @@
         .console-input,
         .console-output {
             font-family: 'Courier New', monospace;
-            font-size: 2rem; 
+            font-size: 1.6rem; 
             color: #0f0;
         }
         .console-output {
@@ -38,10 +38,10 @@
     </style>
 </head>
 <body>
-    <h1>404 Error</h1>
-    <p>Page not found</p>
+    <h1>403 Error</h1>
+    <p>Forbidden for mortals</p>
     <div class="console">
-        <span class="console-output">&gt; 404 Error: {{ .Page }} not found</span><br>
+        <span class="console-output">&gt; 403 Error: You are forbidden from visiting this page</span><br>
         <span class="console-input">> Please check the URL and try again</span>
     </div>
 </body>
