made tesseract changes except fine system

--- a/EXPRESSBACKEND/views/dashboards/admin.ejs
+++ b/EXPRESSBACKEND/views/dashboards/admin.ejs
@@ -74,7 +74,7 @@
         #logoutbutton {
             position: fixed;
             bottom: 2%;
-            left: 2%;
+            right: 2%;
             z-index: 9999;
         }
 
