--- a/EXPRESSBACKEND/views/dashboards/client.ejs
+++ b/EXPRESSBACKEND/views/dashboards/client.ejs
@@ -49,7 +49,7 @@
         #buttoncontainer {
             position: fixed;
             bottom: 2%;
-            left: 2%;
+            right: 2%;
             z-index: 9999;
             display: flex;
             gap: 5%;
