--- a/EXPRESSBACKEND/views/login/client.ejs
+++ b/EXPRESSBACKEND/views/login/client.ejs
@@ -82,6 +82,12 @@
             border-bottom: 1px solid #4285f4; 
             background-color: #000; 
         }
+        #backbutton{
+            position: fixed;
+            bottom: 2%;
+            right: 2%;
+            z-index: 9999;
+        }
     </style>
 </head>
 <body>
@@ -102,9 +108,12 @@
             <div id="message" class="mt-3"></div>
         </div>
     </div>
+    <a href="/"><button id="backbutton" class="btn btn-primary">Back</button></a>
 
     <script>
-        
+        if (document.cookie.includes('token')) {
+            window.location.href = '/client/dashboard';
+        }
         const stars = document.getElementById('stars');
         for (let i = 0; i < 100; i++) {
             const star = document.createElement('div');
