--- a/EXPRESSBACKEND/views/login/noaccess.ejs
+++ b/EXPRESSBACKEND/views/login/noaccess.ejs
@@ -45,6 +45,11 @@
         <span class="console-input">> Please check the URL and try again</span>
     </div>
 </body>
+<script>
+    setTimeout(() => {
+        window.location.href = '/';
+    }, 5000);
+</script>
 </html>
 
 
