--- a/EXPRESSBACKEND/views/search/client.ejs
+++ b/EXPRESSBACKEND/views/search/client.ejs
@@ -93,7 +93,7 @@
                     <h3>Due Time: <text><%=book.NumberofDays%> days</text></h3>
                     <h3>Number of Available Copies: <text><%=book.NumberofCopiesAvailable%></text></h3>
                     <h3>Total Number of Copies: <text><%=book.NumberofCopies%></text></h3>
-                    <h3>Number of Copies Borrowed: <text><%=book.NumberofCopiesBorowed%></text></h3>
+                    <h3>Number of Copies Borrowed: <text><%=book.NumberofCopiesBorrowed%></text></h3>
                 </div>
             </div>
             <div class="col-md-6">
@@ -137,15 +137,10 @@
             </div>
         </div>
     <div id="logoutbutton" style="flex-direction: row;">
-        <a class="btn btn-primary logout-button">Logout</a>
         <button type="button" class="btn btn-danger" onclick="window.location.href='/client/dashboard'">Back</button>
     </div>
 </body>
 <script>
-    const logoutButton = document.querySelector('.logout-button');
-    logoutButton.addEventListener('click', () => {
-        window.location.href = '/logout';
-    });
     const message = document.getElementById('message');
 
     function CheckOut() {
