--- a/EXPRESSBACKEND/views/login/register.ejs
+++ b/EXPRESSBACKEND/views/login/register.ejs
@@ -89,6 +89,12 @@
             gap: 5%;
             margin-bottom: 1.5%; 
         }
+        #backbutton{
+        position: fixed;
+        bottom: 2%;
+        right: 2%;
+        z-index: 9999;
+        }
     </style>
 </head>
 <body>
@@ -107,7 +113,7 @@
                 <div class="form-group">
                     <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="user_type">User Type:</label>
                 <div class="radio-container">
                     <div class="form-check">
@@ -123,12 +129,13 @@
                         </label>
                     </div>
                 </div>
-                </div>
+                </div> -->
                 <button type="submit" class="btn btn-primary register-btn">Register</button>
             </form>
             <div id="message" class="mt-3"></div>
         </div>
     </div>
+    <a href="/"><button id="backbutton" class="btn btn-primary">Back</button></a>
 
     <script>
         const stars = document.getElementById('stars');
