--- a/EXPRESSBACKEND/views/dashboards/client.ejs
+++ b/EXPRESSBACKEND/views/dashboards/client.ejs
@@ -177,6 +177,7 @@
         </div>
         <br />
         <br />
+        <p style="color: white; font-size: large;">Overdue Fine: &#8377; <%=OverDueFine%></p>
         <div class="separator">
             <div class="container2" style="display: flex; flex-direction: column;">
                 <h2>Explore</h2>
